Change color scheme

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -1,29 +1,5 @@
 /* Default color scheme */
-@define-color color0 #131971;
-@define-color color1 #9E9BDE;
-@define-color color2 #8F91D6;
-@define-color color3 #AEB0EA;
-@define-color color4 #5E6EDD;
-@define-color color5 #8579C5;
-@define-color color6 #7A84DF;
-@define-color color7 #d8cadf;
-@define-color color8 #19229c;
-@define-color color9 #b7b1ff;
-@define-color color10 #a2a6ff;
-@define-color color11 #c0c4ff;
-@define-color color12 #657fff;
-@define-color color13 #9e88ff;
-@define-color color14 #8899ff;
-@define-color color15 #fff2ff;
-@define-color selected_bg_color #7e6ccb;
-@define-color bg_color mix(@color0, @color15, 0.12);
-@define-color tooltip_bg_color mix(@color0, @color15, 0.04);
-@define-color base_color mix(@color0, @color15, 0);
-@define-color fg_color @color15;
-@define-color text_color @color15;
-@define-color text_color_disabled mix(@text_color, @base_color, 0.4);
-@define-color selected_fg_color @color15;
-@define-color tooltip_fg_color @color15;
+@import url("../colors3");
 
 /* colormap actually used by the theme, to be overridden in other css files */
 @define-color theme_bg_color @bg_color;
@@ -66,7 +42,6 @@
 @define-color borders shade(@theme_selected_bg_color, 0.857);
 @define-color scrollbar_trough shade(@theme_base_color, 0.9);
 @define-color scrollbar_slider_prelight mix(@scrollbar_trough, @theme_fg_color, 0.5);
-
 
 /* osd */
 @define-color osd_separator #49525B;
