--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,13 +1,5 @@
-
 /* Default color scheme */
-@define-color bg_color #131971;
-@define-color fg_color #fff2ff;
-@define-color base_color #9E9BDE;
-@define-color text_color #fff2ff;
-@define-color selected_bg_color #7e6ccb;
-@define-color selected_fg_color #fff2ff;
-@define-color tooltip_bg_color #131971;
-@define-color tooltip_fg_color #fff2ff;
+@import url("../colors3");
 
 /* colormap actually used by the theme, to be overridden in other css files */
 @define-color theme_bg_color @bg_color;
@@ -50,7 +42,6 @@
 @define-color borders #FAFAFA;
 @define-color scrollbar_trough shade(@theme_base_color, 0.9);
 @define-color scrollbar_slider_prelight mix(@scrollbar_trough, @theme_fg_color, 0.5);
-
 
 /* osd */
 @define-color osd_separator #49525B;
